<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shopping List</string>
    <string name="action_add">Add</string>
    <string name="action_clear">Clear</string>
    <string name="action_clear_checked">Clear Checked</string>
    <string name="refresh">Refresh</string>
    <string name="check_all">Check All</string>
    <string name="userpass">user/pass</string>
    <string name="network_problem">Could not reach backend, please check signal and try again.</string>
    <string name="no_items">No Items</string>
    <string name="new_account">Create Account</string>
    <string name="email_address">email address</string>
    <string name="password">password</string>
    <string name="password_confirmation">confirmation</string>
    <string name="link_account">Link Account</string>
    <string name="back">back</string>
    <string name="bad_userpass">bad username/pass</string>
    <string name="logout">Logout</string>
    <string name="isLoggedOut">is logged out.</string>
    <string name="login">Login</string>

</resources>
