<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kleetus.shoppinglist.MainActivity">

    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:orderInCategory="100"
        android:showAsAction="always" />


    <item
        android:id="@+id/action_clear_checked"
        android:title="@string/action_clear_checked"
        android:orderInCategory="101"
        android:showAsAction="never" />


    <item
        android:id="@+id/action_check_all"
        android:title="@string/check_all"
        android:orderInCategory="102"
        android:showAsAction="never" />

    <item
        android:id="@+id/action_link_account"
        android:title="@string/link_account"
        android:orderInCategory="103"
        android:showAsAction="never" />

</menu>
