<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:id="@+id/email_address" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_below="@id/email_address" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirmation"
        android:id="@+id/password_confirmation"
        android:layout_below="@id/password" />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_account"
        android:layout_below="@id/password_confirmation"
        android:id="@+id/create_account" />

    <Button
        android:layout_marginTop="30dp"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/back"
        android:layout_below="@id/password_confirmation"
        android:layout_alignParentRight="true" />

</RelativeLayout>